app/assets/stylesheets/custom.css
.profile_picture a {
    border: 1px solid #f3f3f3;
    border-radius: 50%;
    display: inline-block;
    margin: 0 auto;
    overflow: hidden;
    padding: 3px;
    transition: all 0.4s ease 0s;
}

.profile_picture a img {
    border-radius: 50%;
    display: inline-block;
    height: 150px;
    margin: 0;
    padding: 0;
    width: 150px;
}

.profile_picture a:hover {
    opacity: 0.8;
}

.profile_inner {
    border-right: 1px solid #ebebeb;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding: 0 0 67px;
}

.profile_area {
    padding-bottom: 0px;
    padding-top: 80px;
    text-align: center;
}

body {
    background-color: #f6f6f6;
}

.profile_area .profile_inner p {
    color: #777777;
    font-family: "Noto Serif",serif;
    font-size: 19px;
    font-weight: normal;
    line-height: 30px;
    margin: 0;
    padding: 0;
}

.profile_area .profile_inner h2 a {
    color: #262626;
    display: inline-block;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.profile_area .profile_inner .social_icon a {
    color: gray;
    display: inline-block;
    font-size: 29px;
    line-height: 24px;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.profile_area .profile_inner .social_icon a:hover {
    -moz-transform:scale(1.15);
    -webkit-transform:scale(1.15);
    -o-transform:scale(1.15);
}

.modal-dialog {
    margin: 30px auto;
    width: 900px !important;
}

.project > tbody > tr > td {
    padding: 10px 10px 60px 10px;
    vertical-align: top;
}

.btn-nav {
    background-color: #f6f6f6;
    border-color: #f6f6f6;
    color: #000000;
}

.btn-nav:hover {
    border-color: #000;
}

#navigation > tbody > tr > td {
    padding: 0 20px;
    border-right: 1px solid black;
}

.navbar-nav > li > a {
    font-size: 22px;
    color: #777777;
}

.navbar-collapse {
    margin-top: 60px;
}

.collapsing {
    -webkit-transition: none;
    transition: none;
}

.pad20 {
    padding: 15px;
}

.active_tab {
    border-color: #000;
}

.panels {
    border-radius: 10px;
    padding: 20px;
    box-shadow: 3px 3px 3px 3px gray;
    bottom-border: 1px solid lightgray;
    overflow: auto;
}

.oliver {
    border-radius: 40px;
    padding: 20px;
    width: 250px;
}

